--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,18 +9,21 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
     <title>ORC</title>
-	<!--Favicon-->
-	<link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
-	<link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
-	<link rel="shortcut icon" href="/favicon/favicon.ico" />
-	<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
-	<meta name="apple-mobile-web-app-title" content="ORC" />
-	<link rel="manifest" href="/favicon/site.webmanifest" />
+    <!--Favicon-->
+    <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="ORC" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
 </head>
+
 <body>
-  
+
     <div class="nav" id="nav-change">
         <a class="logo" href="index.html"><img class="logo-img" src="./img/ORC.png"></a>
         <ul class="nav-links">
@@ -27,7 +31,9 @@
             <li><a href="./retos/retos.html" class="nav-button">Retos</a></li>
             <li><a href="./calendario/calendario.html" class="nav-button">Calendario</a></li>
             <li><a href="./normas/Normas y reglamentos de la ORC.pdf" target="_blank" class="nav-button">Normas</a></li>
-            <li class="form-button-bg"><a href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details" target="_blank" class="form-button">Apúntate</a></li>
+            <li class="form-button-bg"><a
+                    href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details"
+                    target="_blank" class="form-button">Apúntate</a></li>
         </ul>
         <label for="check" class="icon-class">
             <i class="fas fa-bars" id="btn"></i>
@@ -38,7 +44,8 @@
         <div class="header-body">
             <div class="titles">
                 <h1>Olympic Robotic <br> Challenge</h1>
-                <p>Bienvenidos a una nueva edición de la ORC, una iniciativa de <b><a href="http://instagram.com/makersupv">@MAKERSUPV</a></b>.</p>
+                <p>Bienvenidos a una nueva edición de la ORC, una iniciativa de <b><a
+                            href="http://instagram.com/makersupv">@MAKERSUPV</a></b>.</p>
             </div>
         </div>
     </section>
@@ -46,7 +53,9 @@
     <section class="second-section">
         <h2 class="second-section-pregunta">¿Qué es la ORC?</h2>
         <p class="second-section-respuesta">
-            La ORC (Olympic Robotic Challenge) es una competición de robótica que te dará la oportunidad de desafiar tus habilidades programando robots seguidores de línea. La competición contará con una serie de retos y pruebas que se revelarán a lo largo de la competición.
+            La ORC (Olympic Robotic Challenge) es una competición de robótica que te dará la oportunidad de desafiar tus
+            habilidades programando robots seguidores de línea. La competición contará con una serie de retos y pruebas
+            que se revelarán a lo largo de la competición.
         </p>
         <div>
             <div class="container">
@@ -59,13 +68,15 @@
             <div class="container">
                 <h3>¿Qué necesitas?</h3>
                 <p>
-                    Forma un equipo de hasta 6 personas (se recomienda ser 4), trae tu portátil y prepárate para la aventura. Nosotros nos encargaremos de proporcionarte el resto de las herramientas necesarias. 
+                    Forma un equipo de hasta 3 personas, trae tu portátil y prepárate para la
+                    aventura. Nosotros nos encargaremos de proporcionarte el resto de las herramientas necesarias.
                 </p>
             </div>
             <div class="container">
                 <h3>¿Dónde y cuándo se hará?</h3>
                 <p>
-                    La ORC tendrá lugar del 10 de febrero hasta el 7 de marzo y se realizará en la ETSIADI (UPV). <br> Habrá talleres para construir los robots los miércoles y jueves a las 17:00.
+                    La ORC tendrá lugar del 10 de febrero de 2026 al 13 de marzo y se realizará en la ETSIADI (UPV).
+                    <br> Habrá talleres para construir los robots los martes y viernes a las 17:00.
                 </p>
                 <button><a href="./calendario/calendario.html">Calendario</a></button>
             </div>
@@ -74,49 +85,52 @@
     <section class="third-section">
         <h2>¡Incríbite ya!</h2>
         <p>
-            ¿Tienes lo que se necesita para superar los retos de la ORC? ¡Demuéstralo inscribiéndote hoy mismo! Sólo necesitas completar nuestro formulario para unirte a la competición:
+            ¿Tienes lo que se necesita para superar los retos de la ORC? ¡Demuéstralo inscribiéndote hoy mismo! Sólo
+            necesitas completar nuestro formulario para unirte a la competición:
         </p>
-        <button><a href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details" target="_blank">Apuntarse</a></button>
+        <button><a href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details"
+                target="_blank">Apuntarse</a></button>
     </section>
     <section class="footer">
 
-            <div class="logos" 
-                 style="background-color: #ffffff; 
+        <div class="logos" style="background-color: #ffffff; 
                         padding-top: 18px;
                         padding-bottom: 18px;">
-                <img src="./img/banda_logos_UPV_VRAIN_nueva.jpg" alt="Logos">
-            </div>
-            <div class="logos"
-                style=" padding: 32px;
+            <img src="./img/banda_logos_UPV_VRAIN_nueva.jpg" alt="Logos">
+        </div>
+        <div class="logos" style=" padding: 32px;
                         padding-bottom: 12px;
                         width: 80%;
                         align-self: center;">
-                <img src="./img/LogosRemake.png" alt="Logos">
-            </div>
+            <img src="./img/LogosRemake2.png" alt="Logos">
+        </div>
 
-            <div class="widthLimit" style="gap:80px; margin-bottom: 24px;">
-                <div class="footer-socials">
-                    <p class="titles footer-title"> Más Información</p>
-                    <ul>
+        <div class="widthLimit" style="gap:80px; margin-bottom: 24px;">
+            <div class="footer-socials">
+                <p class="titles footer-title"> Más Información</p>
+                <ul>
                     <li><a href="./equipo/equipo.html">Equipos</a></li>
-                    <li><a href="./retos/retos.html">Retos</a></li> 
-                    <li><a href="./calendario/calendario.html">Calendario</a></li> 
-                    </ul>
-                </div>
-
-                <div class="footer-socials socials-div">
-                    <div class="logo-cover"><a target="_blank" href="https://makersupv.com"><img class="makers-logo" src="./img/makersLogo.png" ></a></div>
-
-                    <ul>
-                        <li><a target="_blank" class="fa-brands fa-x-twitter" href="https://twitter.com/makersupv"></a></li>
-                        <li><a target="_blank" class="fa fa-github" href="https://github.com/makers-upv"></a></li>
-                        <li><a target="_blank" class="fa fa-linkedin" href="https://www.linkedin.com/company/makers-upv/"></a></li>
-                        <li><a target="_blank" class="fa fa-instagram" href="https://www.instagram.com/makersupv/"></a></li>
-                    </ul>
-                </div>
+                    <li><a href="./retos/retos.html">Retos</a></li>
+                    <li><a href="./calendario/calendario.html">Calendario</a></li>
+                </ul>
             </div>
+
+            <div class="footer-socials socials-div">
+                <div class="logo-cover"><a target="_blank" href="https://makersupv.com"><img class="makers-logo"
+                            src="./img/makersLogo.png"></a></div>
+
+                <ul>
+                    <li><a target="_blank" class="fa-brands fa-x-twitter" href="https://twitter.com/makersupv"></a></li>
+                    <li><a target="_blank" class="fa fa-github" href="https://github.com/makers-upv"></a></li>
+                    <li><a target="_blank" class="fa fa-linkedin"
+                            href="https://www.linkedin.com/company/makers-upv/"></a></li>
+                    <li><a target="_blank" class="fa fa-instagram" href="https://www.instagram.com/makersupv/"></a></li>
+                </ul>
+            </div>
+        </div>
     </section>
 
     <script src="./js/index.js"></script>
 </body>
+
 </html>
