Replace logo image and update HTML structure

--- a/retos/retos.html
+++ b/retos/retos.html
@@ -82,7 +82,7 @@
                     padding-bottom: 12px;
                     width: 80%;
                     align-self: center;">
-            <img src="../img/LogosRemake.png" alt="Logos">
+            <img src="../img/LogosRemake2.png" alt="Logos">
         </div>
 
         <div class="widthLimit" style="gap:80px; margin-bottom: 24px;">
