Update image source in equipo.html

--- a/equipo/equipo.html
+++ b/equipo/equipo.html
@@ -44,7 +44,7 @@
 
     <section class="groups">
         <div class="group group-makers">
-            <img src="../img/makers.jpeg">
+            <img src="../img/makers2.jpeg">
             <div class="text">
                 <h1 class="makers">MAKERS</h1>
                 <p>
