Update workshop schedule days in calendario.html

--- a/calendario/calendario.html
+++ b/calendario/calendario.html
@@ -49,7 +49,7 @@
         <br>
         <h3>La competición tendrá lugar del 10 de febrero de 2026 al 13 de marzo.</h3>
         <br>
-        <h3>Los talleres de formación y construcción se imparten los martes y viernes <br>a las 17:00 en la ETSIADI,
+        <h3>Los talleres de formación y construcción se imparten los miércoles y jueves <br> en la ETSIADI,
             con opción a talleres complementarios bajo petición.</h3>
         <br>
         <h3>El calendario detallado con sesiones saldrá próximamente™.</h3>
