--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <li><a href="./calendario/calendario.html" class="nav-button">Calendario</a></li>
             <li><a href="./normas/Normas y reglamentos de la ORC.pdf" target="_blank" class="nav-button">Normas</a></li>
             <li class="form-button-bg"><a
+            href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details"
+            target="_blank" class="form-button">Apúntate</a></li>
         </ul>
         <label for="check" class="icon-class">
             <i class="fas fa-bars" id="btn"></i>
