Revise registration section and add QR code
Updated the text and structure for better clarity and added a QR code for registration.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <li><a href="./calendario/calendario.html" class="nav-button">Calendario</a></li>
             <li><a href="./normas/Normas y reglamentos de la ORC.pdf" target="_blank" class="nav-button">Normas</a></li>
             <li class="form-button-bg"><a
-            href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details"
-            target="_blank" class="form-button">Apúntate</a></li>
+                    href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details"
+                    target="_blank" class="form-button">Apúntate</a></li>
         </ul>
         <label for="check" class="icon-class">
             <i class="fas fa-bars" id="btn"></i>
@@ -85,11 +85,10 @@
     <section class="third-section">
         <h2>¡Incríbite ya!</h2>
         <p>
-            ¿Tienes lo que se necesita para superar los retos de la ORC? ¡Demuéstralo inscribiéndote hoy mismo! Sólo
-            necesitas completar nuestro formulario para unirte a la competición:
+            ¿Tienes lo que se necesita para superar los retos de la ORC? ¡Demuéstralo inscribiéndote hoy mismo!
+            Escanea el código QR para unirte a la competición:
         </p>
-        <button><a href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details"
-                target="_blank">Apuntarse</a></button>
+        <img src="./img/ORCQR.png" alt="QR Inscripción" style="max-width: 250px; margin-top: 20px;">
     </section>
     <section class="footer">
 
