Remove contest signup link and fix typos

--- a/calendario/calendario.html
+++ b/calendario/calendario.html
@@ -36,8 +36,6 @@
             <li><a href="../calendario/calendario.html" class="nav-button">Calendario</a></li>
             <li><a href="../normas/Normas y reglamentos de la ORC.pdf" target="_blank" class="nav-button">Normas</a>
             </li>
-            <li><a href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details"
-                    target="_blank" class="form-button">Apúntate</a></li>
         </ul>
         <label for="check" class="icon-class">
             <i class="fas fa-bars" id="btn"></i>
@@ -49,7 +47,7 @@
         <br>
         <h3>La competición tendrá lugar del 10 de febrero de 2026 al 13 de marzo.</h3>
         <br>
-        <h3>Los talleres de formación y construcción se imparten los miércoles y jueves <br> en la ETSIADI,
+        <h3>Los talleres de formación y construcción se imparten los miercoles y jueves <br>a las 17:00 en la ETSIADI,
             con opción a talleres complementarios bajo petición.</h3>
         <br>
         <h3>El calendario detallado con sesiones saldrá próximamente™.</h3>
