--- a/retos/retos.html
+++ b/retos/retos.html
@@ -32,8 +32,6 @@
             <li><a href="../calendario/calendario.html" class="nav-button">Calendario</a></li>
             <li><a href="../normas/Normas y reglamentos de la ORC.pdf" target="_blank" class="nav-button">Normas</a>
             </li>
-            <li><a href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details"
-                    target="_blank" class="form-button">Apúntate</a></li>
         </ul>
         <label for="check" class="icon-class">
             <i class="fas fa-bars" id="btn"></i>
@@ -65,9 +63,7 @@
                 robots autónomos. La prueba se considera completada si el robot llega al final sin derribar obstáculos,
                 salirse de la plataforma o quedarse trabado.</p>
         </article>
-        <button><a
-                href="https://r2.thecontesthub.com/862fabd7-1cd2-42b7-85ef-f2567d9b76f6-Normas-y-reglamentos-de-la-ORC"
-                target="_blank">Más información</a></button>
+        <button><a href="../normas/Normas y reglamentos de la ORC.pdf" target="_blank">Más información</a></button>
 
     </section>
 
